Empresa show index update
